force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/BGBK__Payment_Collection_Type_Tier__mdt.object-meta.xml
<CustomObject>
    <label>Payment Collection Type Tier</label>
    <pluralLabel>Payment Collection Type Tiers</pluralLabel>
</CustomObject>