force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Extra_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Extra_Where_Clause__c</fullName>
    <description>Specify any additional filter criteria in SOQL syntax to further refine results of this tier&apos;s query</description>
    <inlineHelpText>Specify any additional filter criteria in SOQL syntax to further refine results of this tier&apos;s query</inlineHelpText>
    <label>System Default Filter</label>
    <type>TextArea</type>
</CustomField>