force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Fieldset_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Fieldset_API_Name__c</fullName>
    <description>API name of the fieldset for the object in this tier</description>
    <inlineHelpText>Specify the Fieldset API name for the object in this tier. If left empty queries for name and search field only.</inlineHelpText>
    <label>Fieldset API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>