force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Limit__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Limit__c</fullName>
    <description>Query results limit for this tier</description>
    <inlineHelpText>Specify the limit that needs to be applied to the query results number for the tier. Blank is an option. Maximum is 200.</inlineHelpText>
    <label>Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>