force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Object_API_Name__c</fullName>
    <description>API Name of the object that should be queried for in this tier.</description>
    <inlineHelpText>Specify the Object API name that should be queried for in this tier</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>