force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Order_By__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Order_By__c</fullName>
    <description>Specify the Field API names to order tier results</description>
    <inlineHelpText>Specify the Field API names to order tier results. Comma delimit if more than one.</inlineHelpText>
    <label>Order By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>