force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Payment_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Collection_Type__c</fullName>
    <description>Defines which Payment Collection Type this tier is related to</description>
    <inlineHelpText>Specify the Payment Collection Type setting name to which this tier should relate to</inlineHelpText>
    <label>Payment Collection Type</label>
    <referenceTo>BGBK__Payment_Collection_Types__mdt</referenceTo>
    <relationshipLabel>Payment Collection Type Tiers</relationshipLabel>
    <relationshipName>Payment_Collection_Type_Tiers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>