force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Search_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Search_Field_API_Name__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <description>Specify the Field API Name to search by</description>
    <inlineHelpText>Specify the Field API Name to search by</inlineHelpText>
    <label>Search Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>