force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Sort_Order__c</fullName>
    <description>Sort Order of tier search results.</description>
    <inlineHelpText>Sort Order of tier search results. Enter only ASC or DESC</inlineHelpText>
    <label>Sort Order</label>
    <length>4</length>
    <type>Text</type>
</CustomField>