force-app/main/default/objects/BGBK__Payment_Collection_Type_Tier__mdt/fields/BGBK__Tier_Index__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Tier_Index__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Specify the tier index to set what tier should be first and/or second before selecting the fee, deposit or invoice.</description>
    <inlineHelpText>Specify the tier index to set what tier should be first and/or second before selecting the fee, deposit or invoice.</inlineHelpText>
    <label>Tier Index</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>